# Mini-Market-Analyzer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: overview.md
src/mini_market_analyzer/: data_loader.py  gemini_analyzer.py  indicators.py  main.py  strategy.py
tests/: test_data_loader.py  test_indicators.py  test_integration_real.py  test_strategy.py
